# pysweepme

./: .gitignore  ErrorMessage.py  FolderManager.py  LICENSE  LICENSE.md  LICENSE.txt  Ports.py  README.md  WinFolder.py  __init__.py  pyproject.toml  tox.ini
.github/: CODEOWNERS  Check-SemilinearHistory.ps1  check_version_uniqueness.py  compare_ruff_output.py
.github/workflows/: check_version.yml  publish.yml  semilinear_history.yml  tox.yml
dev/: echo_server.py  socket_port_test.py  socket_tests.ipynb
src/pysweepme/: Architecture.py  Config.py  ConfigurationManager.py  DeviceManager.py  EmptyDeviceClass.py  ErrorMessage.py  FolderManager.py  PortManager.py  Ports.py  UserInterface.py  __init__.py  _utils.py  pysweepme_types.py
tests/: test_config.py  test_device_manager.py  test_empty_device.py  test_import.py  test_utils.py
