[project]
name = "pysweepme"
description = "Load SweepMe! instrument drivers in your own python projects."
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = "MIT"
license-files = ["LICENSE.md"]
maintainers = [
    { name = "SweepMe! GmbH", email = "contact@sweep-me.net" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dynamic = ["version"]
dependencies = [
    "psutil ~= 5.9.3",
    "pythonnet ~= 3.0.0.post1",
    "pyserial ~= 3.5",
    "PyVISA ~= 1.13.0",
]

[project.optional-dependencies]
dev = [
    "tox ~= 4.6.1",
    "ruff ~= 0.0.272",
    "black ~= 23.3.0",
    "mypy ~= 1.3.0",
    "pytest ~= 7.3.2"
]
typed = [
    "types-psutil ~= 5.9.3",
    "types-pyserial ~=3.5",
]

[project.urls]
Homepage = "https://sweep-me.net"
Repository = "https://github.com/SweepMe/pysweepme"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "pysweepme.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"
src = ["src"]
select = [
    "F",
    "E", "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EM",
    "FA",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "INT",
    "ARG",
    "PTH",
    "TD",
    "ERA",
    "PD",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "RUF",
]
ignore = [
    "ANN101", "ANN102",
    "D203", "D213", "D406", "D407",
    "G004",  # logging does not have any built-in keyword string interpolation for the message itself, falling back to %s etc. is crap
    "UP015",  # open mode should be clearly stated, explicit is better than implicit
]
exclude = ["WinFolder.py"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "SLF001", "INP001"]  # Tests should use assert, are allowed to test private internals, and aren't a package
".github/*" = ["INP001"]

[tool.black]
line-length = 120
extend-exclude = 'WinFolder\.py'

[tool.mypy]
strict = true
mypy_path = "src"
exclude = [
    'WinFolder\.py',
    '^build/'
]
follow_imports = "silent"

[[tool.mypy.overrides]]
module = "clr.*"
ignore_missing_imports = true
